kubernetes/statefulset.yaml
A
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongostatefulset
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  serviceName: mongosvc
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:6
        command:
        - "mongod"
        - "--replSet"
        - "mainReplset"
        - "--bind_ip"
        - "0.0.0.0"
        resources:
          requests:
            cpu: 256m
            memory: 256Mi
          limits:
            cpu: 512m
            memory: 512Mi
        volumeMounts:
        - name: mongo-pvc
          mountPath: "/data/mongodb"
  volumeClaimTemplates:
  - metadata:
      name: mongo-pvc
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongosvc
  namespace: test
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springapp
  template:
    metadata:
      labels:
        app: springapp
    spec:
      containers:
      - name: springapp
        image: shahir5890/springjenkins:15
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 112m
            memory: 112Mi
          limits:
            cpu: 256m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: springsvc
  namespace: test
spec:
  type: NodePort
  selector:
    app: springapp
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30000
